@@ -1,5 +1,13 @@
 2002-01-17  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
 
+	* [w3m-dev 02866]
+	* search.c: #include <signal.h>
+	* search.c (open_migemo): ignore SIG_INT for migemo process
+	* search.c (open_migemo): close_tty()
+	* search.c (open_migemo): use execl() instead of system()
+	
+2002-01-17  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
+
 	* [w3m-dev 02865]
 	* search.c (open_migemo): add flush_tty()
 
